--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.3.0",
     "@swimlane/ngx-datatable": "^20.1.0",
+    "angular-oauth2-oidc": "^17.0.2",
     "bootstrap": "^5.3.3",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.11.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
